2025-03-09         Manuel Collado       <m-collado@users.sourceforge.net>

	* awklib/xml/(xhtml2man.awk, xhtml2texi.awk): Support <a> tags
	* doc/xhtml2doc.xhtml: Sync with the above

2025-03-03         Manuel Collado       <m-collado@users.sourceforge.net>

	* webTOC, doc/gawk-xml.texi, doc/xhtml2doc.xhtml: Minor fixes and updates.

2025-03-02         Manuel Collado       <m-collado@users.sourceforge.net>

	* awklib/xml/(xhtml2man.awk, xhtml2texi.awk): Fix bugs and improve code
	* doc/xhtml2doc.xhtml: Sync with the above
	* doc/gawk-xml.texi: Small updates

2025-02-28         Manuel Collado       <m-collado@users.sourceforge.net>

	* awklib/xml/(xhtml2man.awk, xhtml2texi.awk): Fix bugs and improve code
	* doc/*.xhtml*: Sync with the above
	* doc/gawk-xml.texi: Add chapter "Using XHTML to write GNU documentation".
	Split long chapter "Reference of XML features": the set of manpages
	becomes a separate chapter.

2025-02-21         Manuel Collado       <m-collado@users.sourceforge.net>

	* awklib/xml/(xhtml2man.awk, xhtml2texi.awk): Fix bugs and improve code
	* doc/*.xhtml*: Sync with the above

2025-02-18         Manuel Collado       <m-collado@users.sourceforge.net>

	* awklib/xml/(xhtml2man.awk, xhtml2texi.awk): Fix bugs and improve code
	* doc/Makefile.am: Extend to cover xhtml2* documentation
	* doc/gawk-xml.texi: Include xhtml2* documentation as xhtml2doc
	* doc/(xhtml2doc.xhtml, xhtml2man.3am, xhtml2texi.3am): new files

2025-02-18         Manuel Collado       <m-collado@users.sourceforge.net>

	* awklib/Makefile.am: Fix bug in make uninstall
	* Makefile.am: Reorder SUBDIRS to let install-(html|pdf) work
	* awklib/xml/xmlbase.awk: Fix errata

2025-02-14         Manuel Collado       <m-collado@users.sourceforge.net>

	* doc/xhtml2*.awk: Moved to awklib/xml
	* doc/Makefile.am: Adapted to the above and fix install-(html|pdf)
	* Makefile.am: Reorder SUBDIRS to let install-(html|pdf) work
	* awklib/xml/xmlbase.awk: Fix errata
