@@ -2478,70 +2478,10 @@ There is a man page of this library (@pxref{xmltree}).
 
 @c @b{FIXME: This chapter has not been written yet}.
 
-@node Using XHTML to write GNU documentation
-@chapter Using XHTML to write GNU documentation
-@cindex xhtml2doc
-
-UNIX and GNU software pieces are usually documented by man pages and Texinfo 
-manuals. The advantage of this approach is to have a centralized database
-and utilities to access the documentation of some piece directly from its name.
-Just invoke the @code{man} or @code{info} utilities to read the documents.
-
-Man pages and Texinfo manuals are written using their specific notations.
-When these notations were created they constituted a great technological
-advance. But nowadays they may look a bit esoteric. So some developers prefer
-to use simpler or well known authoring languages like Markdown or HTML.
-
-Markdown was created as an unobtrusive and intuitive markup notation. Over
-the years it has evolved and is now a powerful notation. At the cost of not
-being so intuitive as before. But it can still effectively edited with
-any plain text editor.
-
-HTML is a well known and widely used markup notation. Although a plain text
-editor can be used, a specialized editor is required to be productive. There
-is a bunch of HTML editors, including free and WYSIWYG ones.
-
-To comply with the GNU guidelines, documents in the alternate authoring
-language should be converted to the roff/man or the Texinfo notation and
-installed in the standard location. Document converters, like
-@uref{https://pandoc.org/, Pandoc}, can do most of the work.
-
-The ability of the @code{gawk-xml} extension to read XML documents opens
-an additional possibility. It is possible to use gawk scripts to convert
-the XHTML markup to roff/man or Texinfo. XHTML is the XML version of the
-widely used HTML markup. Part of the @code{gawk-xml} documentation has been
-written in XHTML and automatically converted during the @code{gawk-xml}
-build process. Without any dependency on Pandoc or any other external converter.
-
-To be productive, this approach require a good XHTML editor.
-Fortunately there is one, namely the excellent
-@uref{https://www.xmlmind.com/xmleditor/, XMLmind XML editor}. It is a
-commercial product, but it offers a Personal Edition, free to use by
-individuals, open source projects and non-profit organizations.
-
-This editor is not a text editor, but a structure editor. The edited
-document is guaranteed to be not only well formed, but also valid XHTML markup.
-And offers several simultaneous editable views of the document while editing.
-Including a @emph{no style sheet} view of the XHTML structure, the so-called @emph{Semantic}
-view with styles intended to reflect the purpose of each XHTML element,
-the @emph{Emulate Web Browser} view that emulates (to a certain extent)
-how a Web browser typically renders an HTML page, and even a plain text view
-of the raw @emph{XHTML source}.
-
-Conversion of the XHTML markup is done by the @code{xhtml2man.awk} and
-@code{xhtml2texi.awk} scripts. These scripts are installed along the
-other awk companion libraries of the @code{gawk-xml} extensions. So they can be
-used by any interested software developer outside the gawkexlib environment.
-
-Both scripts are jointly documented in the @ref{xhtml2doc} man page.
-Only a subset of XHTML is supported, but enough to write the intended
-man pages and parts of Texinfo manuals.
-
-The xhtml2doc man page shows the list of acceptable HTML tags, and explains
-which tags are required to generate an acceptable document file,
-according to the UNIX or GNU document specification. In addition it tells
-how to use conditional tags to generate slightly different text content
-of a man page and a Texinfo fragment from the same XHTML source.
+@c @node Using XHTML to write GNU documentation
+@c @chapter Using XHTML to write GNU documentation
+@c @cindex xhtml2doc
+@include xhtml2doc-chapter.texi
 
 
 @node Problems from the newsgroups comp.text.xml and comp.lang.awk
