@@ -166,7 +166,7 @@ gawk [<i>options</i>] -f <b>xhtml2texi</b> <i>xhtml-file</i></pre>
 &lt;li&gt;       list item
 &lt;pre&gt;      preformatted text
 &lt;br&gt;       line break
-&lt;a&gt;        link
+&lt;a&gt;        link to URL or texinfo node
 &lt;em&gt;       italic
 &lt;i&gt;        italic
 &lt;var&gt;      italic
